# FinSense

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: phase1-attn-baseline.yaml  phase1-attn-focal.yaml  phase1-attn-sampler.yaml  phase1-attn-weighted_ce.yaml  phase1-linear-baseline.yaml  phase1-linear-focal.yaml  phase1-linear-sampler.yaml  phase1-linear-weighted_ce.yaml  phase1-mlp2-baseline.yaml  phase1-mlp2-focal.yaml  phase1-mlp2-sampler.yaml  phase1-mlp2-weighted_ce.yaml  phase1-mlp3-baseline.yaml  phase1-mlp3-focal.yaml  phase1-mlp3-sampler.yaml  phase1-mlp3-weighted_ce.yaml  phase2-deberta-ft-combo.yaml  phase2-deberta-ft-sampler.yaml  phase2-finbert-ft-sampler.yaml  phase2-llama-lora.yaml  phase2-llama-qlora.yaml
notebooks/: phase0-eda.ipynb
scripts/: eval.py  train.py  train_phase2.py
src/finsense/: __init__.py
src/finsense/data/: __init__.py  dataset.py  preprocessing.py  splits.py
src/finsense/data/splits/: phase0_v1.json
src/finsense/evaluation/: __init__.py  metrics.py
src/finsense/models/: __init__.py  backbone.py  heads.py  llama_classifier.py
src/finsense/training/: __init__.py  fine_tune.py  lora_trainer.py  losses.py  sampler.py  trainer.py
tests/: test_heads.py  test_llama_classifier.py  test_losses.py  test_metrics.py  test_preprocessing.py
