[project]
name = "finsense"
version = "0.0.0"
description = "Sentiment classifier for twitter-financial-news-sentiment"
requires-python = "==3.11.*"
dependencies = [
    "datasets>=3.0",
    "transformers>=4.45",
    "sentencepiece>=0.2",
    "tiktoken>=0.7",
    "numpy>=1.26,<2.2",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "scikit-learn>=1.5",
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "requests>=2.32",
    "protobuf>=7.34.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finsense"]
